remove test endpoint
