# simple_api/server.py
@@ -72,13 +72,6 @@ def get_ddrs():
                     'path': '/ddrs'
                   })
 
-@app.route('/test/healthcheck', methods=['GET'])
-def get_test():
-    return jsonify({
-                    'deployment': socket.gethostname(),
-                    'path': '/test'
-                  })
-
 if __name__ == '__main__':
     app.run(host='0.0.0.0', port=5000, debug=True)
 
